[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Levels/Handlers/level.gd" id="1_28k5f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ndgqk"]
size = Vector3(3, 1, 3)

[node name="LevelBase" type="RigidBody3D" node_paths=PackedStringArray("parts", "geometry", "start_node", "input_node", "input_collider")]
freeze = true
script = ExtResource("1_28k5f")
parts = []
geometry = NodePath("Geometry")
start_node = NodePath("Starts")
input_node = NodePath("InputTrigger")
input_collider = NodePath("InputTrigger/CollisionShape3D")

[node name="Geometry" type="Node3D" parent="."]

[node name="Starts" type="Area3D" parent="."]

[node name="InputTrigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InputTrigger"]
shape = SubResource("BoxShape3D_ndgqk")
disabled = true

[connection signal="area_entered" from="Starts" to="." method="start_timer"]
[connection signal="area_entered" from="InputTrigger" to="." method="input_trigger"]
